--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>猜猜我是誰</title>
-    <!-- link rel="stylesheet" href="bcgg-styles.css" -->
+    <link rel="stylesheet" href="bcgg-styles.css">
 </head>
 <body>
     <div class="game-container">
