--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="game-container">
         <h1>猜猜我是誰 (聖經人物)</h1>
         <div id="start-screen" class="screen">
-            <h2>歡迎！</h2>
+            <h2>歡迎！猜猜我是誰</h2>
             <p>你能猜出聖經中的人物嗎？</p>
             <button id="start-game">開始遊戲</button>
         </div>
