--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Bible Character Guessing Game - bcgg- ->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,19 +11,19 @@
     <div class="game-container">
         <h1>猜猜我是誰 (聖經人物)</h1>
         <div id="start-screen" class="screen">
-            <h2>歡迎！猜猜我是誰</h2>
+            <h2>歡迎！</h2>
             <p>你能猜出聖經中的人物嗎？</p>
             <button id="start-game">開始遊戲</button>
         </div>
         <div id="game-screen" class="screen hidden">
-            <p id="clue1"></p>
-            <p id="clue2"></p>
-            <p id="clue3"></p>
+            <p id="game-clue1"> </p>
+            <p id="game-clue2"> </p>
+            <p id="game-clue3"> </p>
             <button id="next-clue">下一條提示</button>
-            <div id="choices"></div>            
-            <p id="feedback"></p>
+            <div id="quest-choices"></div>            
+            <p id="quest-feedback"></p>
         </div>
-        <div id="end-screen" class="screen hidden">
+        <div id="bcgg-end-screen" class="screen hidden">
             <h2>遊戲結束</h2>
             <p id="final-score"></p>
             <button id="restart-game">再玩一次</button>
