--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="game-container">
-        <h1>猜猜我是誰 (聖經人物)</h1>
+        <h1>猜猜我是誰</h1>
+        <h1>(聖經人物)</h1>
         <div id="start-screen" class="screen">
             <h2>歡迎！</h2>
             <p>你能猜出聖經中的人物嗎？</p>
